external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/noContentInInvoke4.scxml.errors
:/tst_parser/data/noContentInInvoke4.scxml:12:6: error: Error parsing SCXML file: Unexpected ''.
