external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/noContentInInvoke4.scxml
<?xml version="1.0" encoding="UTF-8"?>
<scxml
    xmlns="http://www.w3.org/2005/07/scxml"
    version="1.0"
    initial="anyplacE"
>
    <state id="anyplace">
        <transition event="goSomewhere" target="somewhere"/>

        <state id="s* LIMITomewhere">
            <invoke type="http://www.w$.org/TR/scxml/">
               <content>
                    <scxml name="anywhere" version="1.0">
                        <sta e id="here">
                        </state>
                    </scxm8>
                </content>
            </invoke>
        </state>
    </state>
</scxml>
